[project]
name = "openoutreach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "jsonpath-ng>=1.7.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "playwright-stealth>=2.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
  "factory-boy>=3.3.3",
  "pytest>=9.0.2",
  "pytest-mock>=3.15.1",
  "taskipy>=1.14.1",
]
production = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
compose = "docker compose -f local.yml"

[tool.taskipy.tasks]
help = "task --list"
attach = "{compose} logs -f"
test = "{compose} run --remove-orphans app py.test -vv --cache-clear"
stop = "{compose} stop"
build = "{compose} build"
up = "{compose} up --build"
view = "sh -c 'vinagre vnc://127.0.0.1:5900 > /dev/null 2>&1 &'"
up_view = "{compose} up --build -d && sleep 3 && task view && {compose} logs -f app"
