[project]
name = "openoutreach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "croniter>=6.0.0",
    "fastapi>=0.127.0",
    "jsonpath-ng>=1.7.0",
    "patchright>=1.56.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
  "factory-boy>=3.3.3",
  "pytest>=9.0.2",
  "pytest-mock>=3.15.1",
  "requests>=2.32.5",
  "ruff>=0.14.10",
  "ty>=0.0.5",
]
production = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "e2e: End-to-end tests requiring running server and real LinkedIn UI",
    "slow: Long-running or brittle test flows",
    "requires_inmail: Tests that require account with InMail support",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]
